feat: implement core entities and add placeholders for project structure
- Implemented all main domain models/entities with JPA annotations.
- Added placeholder files for repositories, services, controllers, DTOs, enums, utility classes, config, exceptions, and security.
- Established a clear, layered architecture for future development.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,39 @@
+# ------------------------------------------------------------------------
+# Application properties for SideForge
+# ------------------------------------------------------------------------
 spring.application.name=sideForge
+
+server.port=8081
+
+# ------------------------------------------------------------------------
+# Database configuration (MySQL)
+# ------------------------------------------------------------------------
+spring.datasource.url=jdbc:mysql://localhost:3307/side_forge?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=ironhack
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ------------------------------------------------------------------------
+# JPA & Hibernate settings
+# ------------------------------------------------------------------------
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+
+# ------------------------------------------------------------------------
+# MVC settings
+# ------------------------------------------------------------------------
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.mvc.dispatch-options-request=true
+
+# ------------------------------------------------------------------------
+# JWT Security configuration (not implemented yet)
+# ------------------------------------------------------------------------
+# security.jwt.secret=dev-super-secret-string-for-passwords      # Secret key for signing/verifying JWT tokens (change in production)
+# security.jwt.exp-minutes=10                                    # JWT expiration time in minutes
+# security.jwt.issuer=auth-service                               # JWT token issuer
+# security.jwt.audience=all                                      # JWT token audience
+
+# ------------------------------------------------------------------------
+# Error handling settings
+# ------------------------------------------------------------------------
+# server.error.include-stacktrace=never                           # Never include stacktrace in error responses (recommended for production)
