Hotfix to develop bf continue with Exceptions. Implemented user and password (app.propertes) for access to swagger-ui, added @Autowired to DataLoader

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,9 @@ spring.mvc.dispatch-options-request=true
 # security.jwt.issuer=auth-service                               # JWT token issuer
 # security.jwt.audience=all                                      # JWT token audience
 
+spring.security.user.name=admin
+spring.security.user.password=admin
+
 # ------------------------------------------------------------------------
 # Error handling settings
 # ------------------------------------------------------------------------
