Feature/Fix: require owner when creating Design, add default admin user, and improve robustness
- Add required ownerId field to DesignRequestDTO.
- Update DesignServiceImpl to fetch and assign the owner from ownerId and handle errors if not found.
- Inject CustomerRepository into DesignServiceImpl and update constructor.
- Configure SecurityConfig to include an in-memory admin user (admin/admin) for initial testing and administrative access.
- Improve error handling for missing asset or owner on design creation.
- Manually tested endpoints in Postman, which revealed and validated these changes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,8 +33,8 @@ spring.mvc.dispatch-options-request=true
 # security.jwt.issuer=auth-service                               # JWT token issuer
 # security.jwt.audience=all                                      # JWT token audience
 
-spring.security.user.name=admin
-spring.security.user.password=admin
+# spring.security.user.name=admin
+# spring.security.user.password=admin
 
 # ------------------------------------------------------------------------
 # Error handling settings
